roles refactor
